Sun May 22 11:03:16 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO configure.in: use odbc_config if possible

Sun May 22 10:26:02 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/prepare_query.c src/odbc/unittests/const_params.c:
	- fix problems with Sybase
	* src/odbc/unittests/array_out.c: remove warning compiling

Fri May 20 17:15:12 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO: updated
	* src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/array_out.c(added):
	- added test for array binding

Fri May 20 14:36:52 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/ct.c src/ctlib/unittests/cancel.c:
	* src/dblib/bcp.c src/dblib/dblib.c src/odbc/odbc.c:
	* src/tds/token.c:
	- fix ctlib cancellation
	* src/odbc/native.c src/odbc/prepare_query.c:
	* src/odbc/prepare_query.h:
	- handle different type in constant parameters in rpc

Fri May 20 08:54:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c: thread safe fix

Wed May 18 17:54:24 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/cancel.c:
	- do not fail if ct_send is very slow

Wed May 18 13:59:41 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/array_bind.c src/ctlib/unittests/cancel.c:
	* src/ctlib/unittests/ct_diagall.c:
	* src/ctlib/unittests/ct_diagclient.c:
	* src/ctlib/unittests/ct_diagserver.c:
	* src/ctlib/unittests/get_send_data.c:
	* src/ctlib/unittests/lang_ct_param.c:
	* src/ctlib/unittests/rpc_ct_param.c:
	* src/ctlib/unittests/rpc_ct_setparam.c:
	* src/ctlib/unittests/t0003.c:
	* src/ctlib/unittests/t0004.c:
	* src/ctlib/unittests/t0009.c:
	- remove warnings dropping objects
	* src/dblib/unittests/thread.c: fix syntax on Sybase

Tue May 17 16:02:20 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/Makefile.am: fix distro
	* src/dblib/buffering.h src/tds/net.c:
	- fix portability problem