@@ -22,7 +22,7 @@
 
 #include "common.h"
 
-static char software_version[] = "$Id: dbmorecmds.c,v 1.9 2005-04-19 03:51:04 jklowden Exp $";
+static char software_version[] = "$Id: dbmorecmds.c,v 1.10 2005-05-23 08:06:17 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version,	no_unused_var_warn };
 
 int failed = 0;
@@ -79,17 +79,6 @@ main(int argc, char **argv)
 	add_bread_crumb();
 
 	fprintf(stdout, "After dbuse [%s]\n", DATABASE);
-	add_bread_crumb();
-
-	fprintf(stdout, "Dropping table\n");
-	add_bread_crumb();
-	dbcmd(dbproc, "drop table #dblib0024");
-	add_bread_crumb();
-	dbsqlexec(dbproc);
-	add_bread_crumb();
-	while (dbresults(dbproc) != NO_MORE_RESULTS) {
-		/* nop */
-	}
 	add_bread_crumb();
 
 	fprintf(stdout, "creating table\n");
