@@ -24,7 +24,7 @@
 
 
 
-static char software_version[] = "$Id: t0003.c,v 1.10 2005-04-19 03:51:04 jklowden Exp $";
+static char software_version[] = "$Id: t0003.c,v 1.11 2005-05-23 08:06:25 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 
@@ -77,17 +77,6 @@ main(int argc, char **argv)
 	add_bread_crumb();
 
 	dbsetopt(dbproc, DBBUFFER, "100", 0);
-	add_bread_crumb();
-
-	fprintf(stdout, "Dropping table\n");
-	add_bread_crumb();
-	dbcmd(dbproc, "drop table #dblib0003");
-	add_bread_crumb();
-	dbsqlexec(dbproc);
-	add_bread_crumb();
-	while (dbresults(dbproc) != NO_MORE_RESULTS) {
-		/* nop */
-	}
 	add_bread_crumb();
 
 	fprintf(stdout, "creating table\n");
