@@ -24,7 +24,7 @@
 
 
 
-static char software_version[] = "$Id: t0010.c,v 1.11 2005-04-19 03:51:04 jklowden Exp $";
+static char software_version[] = "$Id: t0010.c,v 1.12 2005-05-23 08:06:25 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 
@@ -76,17 +76,6 @@ main(int argc, char **argv)
 #else
 	dbsetopt(dbproc, DBBUFFER, "100", 0);
 #endif
-	add_bread_crumb();
-
-	fprintf(stdout, "Dropping table\n");
-	add_bread_crumb();
-	dbcmd(dbproc, "drop table #dblib0010");
-	add_bread_crumb();
-	dbsqlexec(dbproc);
-	add_bread_crumb();
-	while (dbresults(dbproc) != NO_MORE_RESULTS) {
-		/* nop */
-	}
 	add_bread_crumb();
 
 	fprintf(stdout, "creating table\n");
@@ -161,7 +150,7 @@ main(int argc, char **argv)
 	dbexit();
 	add_bread_crumb();
 
-	fprintf(stderr, "dblib passed for %s\n", __FILE__);
+	printf("dblib passed for %s\n", __FILE__);
 	free_bread_crumb();
 	return 0;
 }
